; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_wmv2dsp.c_put_mspel8_mc12_c.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_wmv2dsp.c_put_mspel8_mc12_c.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32)* @put_mspel8_mc12_c to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @put_mspel8_mc12_c(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca [88 x i32], align 16
  %8 = alloca [64 x i32], align 16
  %9 = alloca [64 x i32], align 16
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %10 = getelementptr inbounds [88 x i32], [88 x i32]* %7, i64 0, i64 0
  %11 = load i32*, i32** %5, align 8
  %12 = load i32, i32* %6, align 4
  %13 = sext i32 %12 to i64
  %14 = sub i64 0, %13
  %15 = getelementptr inbounds i32, i32* %11, i64 %14
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @wmv2_mspel8_h_lowpass(i32* %10, i32* %15, i32 8, i32 %16, i32 11)
  %18 = getelementptr inbounds [64 x i32], [64 x i32]* %8, i64 0, i64 0
  %19 = load i32*, i32** %5, align 8
  %20 = load i32, i32* %6, align 4
  %21 = call i32 @wmv2_mspel8_v_lowpass(i32* %18, i32* %19, i32 8, i32 %20, i32 8)
  %22 = getelementptr inbounds [64 x i32], [64 x i32]* %9, i64 0, i64 0
  %23 = getelementptr inbounds [88 x i32], [88 x i32]* %7, i64 0, i64 0
  %24 = getelementptr inbounds i32, i32* %23, i64 8
  %25 = call i32 @wmv2_mspel8_v_lowpass(i32* %22, i32* %24, i32 8, i32 8, i32 8)
  %26 = load i32*, i32** %4, align 8
  %27 = getelementptr inbounds [64 x i32], [64 x i32]* %8, i64 0, i64 0
  %28 = getelementptr inbounds [64 x i32], [64 x i32]* %9, i64 0, i64 0
  %29 = load i32, i32* %6, align 4
  %30 = call i32 @ff_put_pixels8_l2_8(i32* %26, i32* %27, i32* %28, i32 %29, i32 8, i32 8, i32 8)
  ret void
}

declare dso_local i32 @wmv2_mspel8_h_lowpass(i32*, i32*, i32, i32, i32) #1

declare dso_local i32 @wmv2_mspel8_v_lowpass(i32*, i32*, i32, i32, i32) #1

declare dso_local i32 @ff_put_pixels8_l2_8(i32*, i32*, i32*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
